--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,10 @@
 {
-    "extends": "standard"
+    "extends": "standard",
+    "rules": {
+        "semi": [2, "always"],
+        "space-in-parens": 0,
+        "space-before-function-paren": 0,
+        "indent": [2, 4, { "switchCase": 1 }],
+        "no-unused-vars": [2, { "vars": "local", "args": "none" }]
+    }
 }
