--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
         "semi": [2, "always"],
         "space-in-parens": 0,
         "space-before-function-paren": 0,
-        "indent": [2, 4, { "switchCase": 1 }],
-        "no-unused-vars": [2, { "vars": "local", "args": "none" }]
+        "indent": [2, 4],
+        "no-unused-vars": 0,
+        "padded-blocks": 0
     }
 }
