--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
     "node-sass": "^3.11.2",
     "ora": "^0.3.0",
     "sass-loader": "^4.0.2",
