--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
         "semi": [2, "always"],
         "space-in-parens": 0,
         "space-before-function-paren": 0,
-        "indent": [2, 4],
+        "indent": [WARN, 2],
         "no-unused-vars": 0,
         "padded-blocks": 0
     }
