--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-preset-stage-2": "^6.18.0",
     "chokidar": "^1.6.1",
     "css-loader": "^0.25.0",
-    "eslint": "^3.9.1",
+    "eslint": ">=4.18.2",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.6",
     "eslint-loader": "^1.6.1",
@@ -28,7 +28,7 @@
     "node-sass": "^3.11.2",
     "ora": "^0.3.0",
     "sass-loader": "^4.0.2",
-    "shelljs": "^0.7.5",
+    "shelljs": ">= 0.8.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
