--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-    "presets": ["es2015", "stage-2"]
+  "presets": [
+  	"@babel/preset-env", [
+			"@babel/preset-react", {
+				"runtime": "automatic"
+			}
+  	]
+  ],
+  "plugins": ["babel-plugin-styled-components", "@babel/transform-runtime"]
 }
-
