--- a/package.json
+++ b/package.json
@@ -5,38 +5,36 @@
   "main": "index.js",
   "scripts": {
     "build": "node build/build.js",
-    "dev": "node build/dev"
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --mode production",
+    "serve": "webpack serve --mode development",
+    "serve:prod": "webpack serve --mode production"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "chokidar": "^1.6.1",
-    "css-loader": "^0.25.0",
-    "eslint": ">=4.18.2",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.6",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-promise": "^3.3.1",
-    "eslint-plugin-standard": "^2.0.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.4",
-    "node-sass": "^3.11.2",
-    "ora": "^0.3.0",
-    "sass-loader": "^4.0.2",
-    "shelljs": ">= 0.8.3",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-hot-middleware": "^2.13.1"
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.13.2",
+    "css-loader": "^6.2.0",
+    "eslint-loader": "^4.0.2",
+    "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.2.1",
+    "terser-webpack-plugin": "^5.1.4",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "handlebars": "^4.0.6",
-    "handlebars-loader": "^1.4.0"
+    "@babel/runtime": "^7.14.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "eslint": "^7.31.0"
   }
 }
